# sdkwork-settings

./: .env.example  .env.postgres.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
.github/workflows/: package.yml
.sdkwork/: .gitignore  README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md
apis/app-api/settings/: sdkwork-settings-app-api.openapi.json
apis/app-api/settings/changelogs/: CHANGELOG.md
apis/backend-api/settings/: sdkwork-settings-backend-api.openapi.json
apis/backend-api/settings/changelogs/: CHANGELOG.md
apps/: README.md
apps/sdkwork-settings-pc/: .env.example  AGENTS.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-settings-pc/config/browser/: runtime-env.development.example.json
apps/sdkwork-settings-pc/etc/: sdkwork.deployment.config.json
apps/sdkwork-settings-pc/specs/: README.md
apps/sdkwork-settings-pc/src/: App.tsx  index.css  main.tsx
apps/sdkwork-settings-pc/src/components/: PreferencePanel.tsx  Sidebar.tsx
configs/: README.md  quality-gate.yaml  sdkwork-api-cloud-gateway.settings.development.toml  sdkwork-api-cloud-gateway.settings.production.toml
configs/topology/: cloud.development.env  cloud.production.env  standalone.development.env  standalone.production.env  topology.yaml
crates/: README.md
crates/sdkwork-api-settings-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-settings-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-settings-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-settings-standalone-gateway/: Cargo.toml
crates/sdkwork-api-settings-standalone-gateway/src/: main.rs
crates/sdkwork-routes-settings-app-api/: Cargo.toml
crates/sdkwork-routes-settings-app-api/specs/: component.spec.json
crates/sdkwork-routes-settings-app-api/src/: lib.rs
crates/sdkwork-routes-settings-backend-api/: Cargo.toml
crates/sdkwork-routes-settings-backend-api/specs/: component.spec.json
crates/sdkwork-routes-settings-backend-api/src/: lib.rs
crates/sdkwork-settings-contract/: Cargo.toml
crates/sdkwork-settings-contract/src/: error.rs  lib.rs  models.rs  value_types.rs
crates/sdkwork-settings-contract/tests/: contract_test.rs
crates/sdkwork-settings-database-host/: Cargo.toml
crates/sdkwork-settings-database-host/src/: lib.rs
crates/sdkwork-settings-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-settings-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-settings-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-settings-service-host/: Cargo.toml
crates/sdkwork-settings-service-host/src/: error.rs  lib.rs
crates/sdkwork-settings-standalone-gateway/: Cargo.toml
crates/sdkwork-settings-standalone-gateway/src/: main.rs
crates/sdkwork-settings-web-bootstrap/: Cargo.toml
crates/sdkwork-settings-web-bootstrap/src/: lib.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_settings_baseline.sql  README.md
database/ddl/baseline/sqlite/: 0001_settings_baseline.sql  README.md
database/drift/: policy.yaml
database/fixtures/: README.md
database/migrations/postgres/: README.md
database/migrations/sqlite/: README.md
database/seeds/common/: 001_bootstrap.sql  README.md
database/seeds/locales/: README.md
deployments/: README.md  deploy.yaml
docs/: INDEX.yaml  README.md
docs/architecture/decisions/: ADR-0001-settings-application-root.md  ADR-0002-settings-framework-integration.md  ADR-0003-settings-drive-integration.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
etc/: sdkwork-api-cloud-gateway.settings.development.toml  sdkwork-api-cloud-gateway.settings.production.toml
examples/: README.md
jobs/: README.md
plugins/: README.md
scripts/: README.md  verify-standards.ps1
sdks/: README.md
services/: README.md
services/sdkwork-settings-api-server/: Cargo.toml
services/sdkwork-settings-api-server/src/: main.rs
services/sdkwork-settings-standalone-gateway/: Cargo.toml
services/sdkwork-settings-standalone-gateway/src/: main.rs
specs/: README.md  component.spec.json  topology.spec.json
tests/: README.md
tests/contract/: database-framework.contract.test.mjs
tools/: README.md
