[workspace]
members = [
    "crates/sdkwork-api-settings-assembly",
    "crates/sdkwork-settings-contract",
    "crates/sdkwork-settings-database-host",
    "crates/sdkwork-settings-web-bootstrap",
    "crates/sdkwork-api-settings-assembly",
    "crates/sdkwork-settings-service-host",
    "crates/sdkwork-api-settings-standalone-gateway",
    "crates/sdkwork-routes-settings-app-api",
    "crates/sdkwork-routes-settings-backend-api",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
# === Third-party crates ===
axum = { version = "0.8.8", features = ["ws"] }
futures-util = { version = "0.3.32", features = ["sink"] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
regex = "1.11"
dashmap = "6.1"
rand = "0.8"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# === sdkwork-web-framework integration (WEB_FRAMEWORK_SPEC mandatory) ===
sdkwork_web_core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core", package = "sdkwork-web-core" }
sdkwork_web_axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum", package = "sdkwork-web-axum" }
sdkwork_web_bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap", package = "sdkwork-web-bootstrap" }
sdkwork_web_contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract", package = "sdkwork-web-contract" }
sdkwork_web_store_sqlx = { path = "../sdkwork-web-framework/crates/sdkwork-web-store-sqlx", package = "sdkwork-web-store-sqlx" }
sdkwork_routes_web_framework_backend_api = { path = "../sdkwork-web-framework/crates/sdkwork-routes-web-framework-backend-api", package = "sdkwork-routes-web-framework-backend-api" }

# === sdkwork-database integration (DATABASE_FRAMEWORK_SPEC mandatory) ===
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }

# === sdkwork-utils integration (reduce duplicate code) ===
sdkwork_utils_rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust", package = "sdkwork-utils-rust" }

# === sdkwork-appbase integration (platform id service) ===
sdkwork_id = { path = "../sdkwork-appbase/crates/sdkwork-platform-id-service", package = "sdkwork-platform-id-service" }

# === sdkwork-iam integration (authentication, authorization, application bootstrap) ===
sdkwork_iam_bootstrap = { path = "../sdkwork-iam/crates/sdkwork-iam-bootstrap", package = "sdkwork-iam-bootstrap" }
sdkwork_iam_web_adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter", package = "sdkwork-iam-web-adapter" }
sdkwork_iam_database_host = { path = "../sdkwork-iam/crates/sdkwork-iam-database-host", package = "sdkwork-iam-database-host" }
sdkwork_iam_embedded_application_bootstrap = { path = "../sdkwork-iam/crates/sdkwork-iam-embedded-application-bootstrap", package = "sdkwork-iam-embedded-application-bootstrap" }

# === sdkwork-drive integration (file upload: avatar, logo, config import) ===
sdkwork_drive_contract = { path = "../sdkwork-drive/crates/sdkwork-drive-contract", package = "sdkwork-drive-contract" }
sdkwork_drive_uploader_service = { path = "../sdkwork-drive/crates/sdkwork-drive-uploader-service", package = "sdkwork-drive-uploader-service" }

# === Internal SDKWork Settings workspace members ===
sdkwork_settings_contract = { path = "crates/sdkwork-settings-contract", package = "sdkwork-settings-contract" }
sdkwork_settings_database_host = { path = "crates/sdkwork-settings-database-host", package = "sdkwork-settings-database-host" }
sdkwork_settings_web_bootstrap = { path = "crates/sdkwork-settings-web-bootstrap", package = "sdkwork-settings-web-bootstrap" }
sdkwork_api_settings_assembly = { path = "crates/sdkwork-api-settings-assembly", package = "sdkwork-api-settings-assembly" }
sdkwork_settings_service_host = { path = "crates/sdkwork-settings-service-host", package = "sdkwork-settings-service-host" }
sdkwork_routes_settings_app_api = { path = "crates/sdkwork-routes-settings-app-api", package = "sdkwork-routes-settings-app-api" }
sdkwork_routes_settings_backend_api = { path = "crates/sdkwork-routes-settings-backend-api", package = "sdkwork-routes-settings-backend-api" }

# Note: sdkwork-discovery and sdkwork-rpc-framework are deferred until Settings
# introduces cross-process gRPC RPC services (see ADR-0002).
# When RPC is needed, add:
# sdkwork_rpc_server = { path = "../sdkwork-rpc-framework/crates/sdkwork-rpc-server" }
# sdkwork_rpc_discovery = { path = "../sdkwork-rpc-framework/crates/sdkwork-rpc-discovery" }
# sdkwork_rpc_core = { path = "../sdkwork-rpc-framework/crates/sdkwork-rpc-core" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
