[workspace]
members = [
    "crates/sdkwork-settings-contract",
    "crates/sdkwork-settings-database-host",
    "crates/sdkwork-settings-web-bootstrap",
    "crates/sdkwork-api-settings-assembly",
    "crates/sdkwork-settings-service-host",
    "crates/sdkwork-api-settings-standalone-gateway",
    "crates/sdkwork-routes-settings-app-api",
    "crates/sdkwork-routes-settings-backend-api",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
# === Third-party crates ===
axum = { version = "0.8.8", features = ["ws"] }
futures-util = { version = "0.3.32", features = ["sink"] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
regex = "1.11"
dashmap = "6.1"
rand = "0.8"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# === sdkwork-web-framework integration (WEB_FRAMEWORK_SPEC mandatory) ===
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-store-sqlx = { path = "../sdkwork-web-framework/crates/sdkwork-web-store-sqlx" }
sdkwork-routes-web-framework-backend-api = { path = "../sdkwork-web-framework/crates/sdkwork-routes-web-framework-backend-api" }

# === sdkwork-database integration (DATABASE_FRAMEWORK_SPEC mandatory) ===
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }

# === sdkwork-utils integration (reduce duplicate code) ===
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }

# === sdkwork-appbase integration (platform id service) ===
sdkwork-platform-id-service = { path = "../sdkwork-appbase/crates/sdkwork-platform-id-service" }

# === sdkwork-iam integration (authentication, authorization, application bootstrap) ===
sdkwork-iam-bootstrap = { path = "../sdkwork-iam/crates/sdkwork-iam-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-iam-database-host = { path = "../sdkwork-iam/crates/sdkwork-iam-database-host" }
sdkwork-iam-embedded-application-bootstrap = { path = "../sdkwork-iam/crates/sdkwork-iam-embedded-application-bootstrap" }

# === sdkwork-drive integration (file upload: avatar, logo, config import) ===
sdkwork-drive-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-contract" }
sdkwork-drive-uploader-service = { path = "../sdkwork-drive/crates/sdkwork-drive-uploader-service" }

# === Internal SDKWork Settings workspace members ===
sdkwork-settings-contract = { path = "crates/sdkwork-settings-contract" }
sdkwork-settings-database-host = { path = "crates/sdkwork-settings-database-host" }
sdkwork-settings-web-bootstrap = { path = "crates/sdkwork-settings-web-bootstrap" }
sdkwork-api-settings-assembly = { path = "crates/sdkwork-api-settings-assembly" }
sdkwork-settings-service-host = { path = "crates/sdkwork-settings-service-host" }
sdkwork-routes-settings-app-api = { path = "crates/sdkwork-routes-settings-app-api" }
sdkwork-routes-settings-backend-api = { path = "crates/sdkwork-routes-settings-backend-api" }

# Note: sdkwork-discovery and sdkwork-rpc-framework are deferred until Settings
# introduces cross-process gRPC RPC services (see ADR-0002).
# When RPC is needed, add:
# sdkwork_rpc_server = { path = "../sdkwork-rpc-framework/crates/sdkwork-rpc-server" }
# sdkwork_rpc_discovery = { path = "../sdkwork-rpc-framework/crates/sdkwork-rpc-discovery" }
# sdkwork_rpc_core = { path = "../sdkwork-rpc-framework/crates/sdkwork-rpc-core" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
