[package]
name = "sdkwork-api-settings-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-settings application HTTP plane."

[lib]
name = "sdkwork_api_settings_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-settings-app-api = { path = "../sdkwork-routes-settings-app-api" }
sdkwork-routes-settings-backend-api = { path = "../sdkwork-routes-settings-backend-api" }
