[package]
name = "sdkwork-api-settings-standalone-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Settings standalone application gateway"

[[bin]]
name = "sdkwork-api-settings-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork-settings-database-host.workspace = true
sdkwork-api-settings-assembly.workspace = true
sdkwork-settings-service-host.workspace = true
sdkwork-settings-web-bootstrap.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-web-bootstrap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
