[package]
name = "sdkwork-routes-settings-backend-api"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Settings backend-api routes for /settings/v1/backend-api/*"

[lib]
name = "sdkwork_routes_settings_backend_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-settings-contract.workspace = true
sdkwork-settings-service-host.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true
tracing.workspace = true
