[package]
name = "sdkwork-settings-database-host"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Settings database lifecycle bootstrap"

[lib]
name = "sdkwork_settings_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy.workspace = true
sdkwork_database_config.workspace = true
sdkwork_database_lifecycle.workspace = true
sdkwork_database_spi.workspace = true
sdkwork_database_sqlx.workspace = true
