[package]
name = "sdkwork-settings-database-host"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Settings database lifecycle bootstrap"

[lib]
name = "sdkwork_settings_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-lifecycle.workspace = true
sdkwork-database-spi.workspace = true
sdkwork-database-sqlx.workspace = true
