[package]
name = "sdkwork-settings-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-settings application HTTP plane."

[lib]
name = "sdkwork_settings_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
serde.workspace = true
serde_json.workspace = true
sdkwork_settings_web_bootstrap.workspace = true
sdkwork_routes_settings_app_api.workspace = true
sdkwork_routes_settings_backend_api.workspace = true
