[package]
name = "sdkwork-settings-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-settings application HTTP plane."

[lib]
name = "sdkwork_settings_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork_settings_web_bootstrap.workspace = true
sdkwork-routes-settings-app-api = { path = "../sdkwork-routes-settings-app-api" }
sdkwork-routes-settings-backend-api = { path = "../sdkwork-routes-settings-backend-api" }
