[package]
name = "sdkwork-settings-service-host"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Settings in-process service container"

[lib]
name = "sdkwork_settings_service_host"
path = "src/lib.rs"

[dependencies]
sdkwork-settings-contract.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-platform-id-service.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx = { workspace = true, features = ["chrono", "json"] }
