[package]
name = "sdkwork-settings-web-bootstrap"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Settings HTTP service web-framework bootstrap"

[lib]
name = "sdkwork_settings_web_bootstrap"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork_iam_web_adapter.workspace = true
sdkwork_web_axum.workspace = true
sdkwork_web_bootstrap.workspace = true
sdkwork_web_core.workspace = true
sdkwork_web_contract.workspace = true
sdkwork_settings_service_host.workspace = true
sdkwork_routes_settings_app_api.workspace = true
sdkwork_routes_settings_backend_api.workspace = true
tokio.workspace = true
tracing.workspace = true
