[package]
name = "sdkwork-settings-web-bootstrap"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Settings HTTP service web-framework bootstrap"

[lib]
name = "sdkwork_settings_web_bootstrap"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-settings-service-host.workspace = true
sdkwork-routes-settings-app-api.workspace = true
sdkwork-routes-settings-backend-api.workspace = true
tokio.workspace = true
tracing.workspace = true
