[package]
name = "sdkwork-settings-api-server"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "SDKWork Settings API server process"

[[bin]]
name = "sdkwork-settings-api-server"
path = "src/main.rs"

[dependencies]
sdkwork_settings_database_host.workspace = true
sdkwork_settings_service_host.workspace = true
sdkwork_settings_web_bootstrap.workspace = true
sdkwork_database_config.workspace = true
sdkwork_database_sqlx.workspace = true
sdkwork_web_bootstrap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
